# robo-naila

./: .env.example  .gitignore  Cargo.toml  README.md
ai-server/: .env.example  .gitignore  README.md  conftest.py  download_models.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
ai-server/agents/: base.py  input_processor.py  orchestrator.py  response_generator.py
ai-server/agents/actions/: registry.py  time_handler.py  weather_handler.py
ai-server/config/: grpc.py  hardware.py  hardware_config.py  llm.py  memory.py  mqtt.py  mqtt_config.py  mqtt_topics.py  orchestration.py  stt.py  tts.py  vision.py  weather.py
ai-server/docs/: LLM_SERVICE_IMPLEMENTATION.md  REALTIME_STREAMING_IMPLEMENTATION.md  STT_SERVICE_IMPLEMENTATION.md  TTS_SERVICE_IMPLEMENTATION.md  VISION_SERVICE_IMPLEMENTATION.md
ai-server/graphs/: orchestration.py  orchestration_graph.py  states.py
ai-server/managers/: ai_model.py  voice.py
ai-server/memory/: conversation.py  conversation_memory.py  db.py
ai-server/memory/migrations/: 001_initial.sql
ai-server/mqtt/: client.py
ai-server/mqtt/core/: __init__.py  connection.py  models.py  publisher.py  routing.py  service_coordinator.py
ai-server/mqtt/handlers/: __init__.py  ai_handlers.py  base.py  coordinator.py  device_handlers.py  system_handlers.py
ai-server/mqtt/tests/: pub.py  sub.py
ai-server/prompts/: system.txt
ai-server/rpc/: __init__.py  server.py  service.py
ai-server/scripts/: finetune_tts_params.py  generate_grpc.sh  test_emotions.py  test_grpc_client.py  test_mqtt_client.py  test_ssml.py  verify_tts.py
ai-server/server/: __init__.py  health_monitor.py  lifecycle.py  naila_server.py  platform_utils.py
ai-server/services/: __init__.py  ai_model_manager.py  audio_encoder.py  base.py  llm.py  resource_pool.py  stt.py  text_normalizer.py  tts.py  vision.py  voice_manager.py
ai-server/tests/e2e/: test_end_to_end.py
ai-server/tests/fixtures/: memory_fixtures.py  mqtt_fixtures.py  state_fixtures.py
ai-server/tests/integration/: test_mqtt_integration.py  test_vision_integration.py  test_vision_orchestration.py
ai-server/tests/performance/: test_performance.py
ai-server/tests/unit/: test_action_registry.py  test_ai_model_manager.py  test_grpc_service.py  test_hardware_config.py  test_health_monitor.py  test_input_processor.py  test_lifecycle.py  test_llm_service.py  test_memory.py  test_memory_config.py  test_memory_db.py  test_orchestration_graph.py  test_orchestrator_memory.py  test_resource_pool.py  test_response_generator.py  test_stt_service.py  test_system_prompt.py  test_time_handler.py  test_tts_optimizations.py  test_tts_service.py  test_vision_service.py  test_weather_config.py  test_weather_handler.py
ai-server/utils/: __init__.py  audio_encoder.py  cache.py  emotion_presets.py  logging.py  platform.py  resource_pool.py  retry.py  sentence_buffer.py  ssml_parser.py  text_normalizer.py  text_patterns.py
devices/audio-client/: .env.example  README.md  audio-client.service  pyproject.toml
devices/audio-client/audio_client/: audio.py  config.py  http.py  main.py  metrics.py  profile.py  webrtc.py
devices/audio-client/tests/: test_aec.py  test_audio_pipeline.py  test_http.py
devices/pi-audio/: .env.example  README.md  pi-audio.service  pyproject.toml
devices/pi-audio/pi_audio/: aec.py  audio.py  config.py  http.py  main.py  metrics.py  webrtc.py
devices/pi-audio/tests/: test_aec.py  test_audio_pipeline.py  test_http.py
docs/: ARCHITECTURE.md  INTELLIGENCE_ARCHITECTURE.md  MQTT_PROTOCOL.md  PI_AUDIO_DEVICE.md  STREAMING_ARCHITECTURE.md  WSL_SETUP.md
docs/research-templates/: TTS_PARAMETER_RECOMMENDATIONS.md
firmware/: CMakeLists.txt
firmware/components/app/: CMakeLists.txt  app.c
firmware/components/app/include/: app.h
firmware/components/app_manager/: CMakeLists.txt  app_manager.c
firmware/components/app_manager/include/: app_manager.h
firmware/components/common/: CMakeLists.txt  error_handling.c  mutex_utils.c  naila_log.c
firmware/components/common/include/: common_types.h  error_handling.h  mutex_helpers.h  mutex_utils.h  naila_log.h
firmware/components/config/: CMakeLists.txt  config.c
firmware/components/config/include/: config.h
firmware/components/config_manager/: CMakeLists.txt  config_manager.c
firmware/components/config_manager/include/: config_manager.h
firmware/components/naila_mqtt/: CMakeLists.txt  naila_mqtt.c
firmware/components/naila_mqtt/include/: naila_mqtt.h
firmware/components/wifi/: CMakeLists.txt  wifi.c  wifi_manager.c
firmware/components/wifi/include/: wifi.h  wifi_manager.h
firmware/main/: CMakeLists.txt  app.c  app.h  config.h  main.cpp  mqtt_credentials.h.in  sdkconfig.defaults  wifi_credentials.h.in
firmware/network/: CMakeLists.txt  mqtt_client.c  naila_mqtt.c  network_manager.c  wifi.c
firmware/network/include/: mqtt_client.h  naila_mqtt.h  network_manager.h  wifi.h
firmware/scripts/: README.md  build.sh  common.sh  erase.sh  flash.sh  format.sh  monitor.sh  setenv.sh
gateway/pi-device/: README.md  config.py  main.py  requirements.txt
gateway/pi-gateway/: README.md  main.py  pi-gateway.service  requirements.txt
gateway/pi-gateway/config/: settings.py
gateway/pi-gateway/gateway/: __init__.py  audio_gateway.py  session.py  tracks.py  vad.py
gateway/pi-gateway/mqtt/: __init__.py  client.py  signaling.py
gateway/pi-gateway/tcp/: __init__.py  ai_client.py
hub/: Cargo.toml  README.md  build.rs
hub/src/: audio.rs  device.rs  grpc.rs  http.rs  lib.rs  main.rs  metrics.rs  vad.rs  webrtc.rs
hub/src/transport/: audio.rs  mod.rs  webrtc.rs
hub/tests/: device.rs  loopback.rs  support.rs
proto/: naila.proto
scripts/: dev-down.sh  dev-up.sh  rebuild-llama-cuda.sh  win-audio-client-run.ps1  win-audio-client-setup.ps1
shared/: nailaV1.proto
