[project]
name = "ai-server"
version = "0.1.0"
description = "Server for NAILA Robot Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langgraph>=0.5.4",
    "paho-mqtt>=2.1.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "numpy>=2.3.2",
    "accelerate>=1.10.0",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.2.1",
    "freezegun>=1.5.4",
    "factory-boy>=3.3.3",
]
