[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.0"
dashmap = "6.1.0"
opus = "0.3.1"
prost = "0.14.3"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
webrtc = "0.17.0"
webrtc-vad = "0.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }

[build-dependencies]
tonic-prost-build = "0.14"
