[project]
name = "pi-audio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.9.0",
    "aiohttp>=3.10.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "speexdsp>=0.1.2",
]

[project.scripts]
pi-audio = "pi_audio.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
