[project]
name = "pi-audio"
version = "0.1.0"
description = "WebRTC audio client for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.9.0",
    "aiohttp>=3.10.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "speexdsp>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-aiohttp>=1.1.0",
]

[project.scripts]
pi-audio = "pi_audio.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
